# gradgen

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  main.py  pyproject.toml  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  dox.yml  python-tests.yml
abc/: Cargo.toml  README.md
abc/primal/: Cargo.toml  README.md
abc/square_plus_one_hessian_x/: Cargo.toml  README.md
abc/square_plus_one_jacobian_x/: Cargo.toml  README.md
abc/src/: lib.rs
api-dox/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
api-dox/_modules/: index.html
api-dox/_sources/: index.rst.txt
api-dox/api/: gradgen.html  modules.html
api-ref/: .buildinfo  index.html  objects.inv  py-modindex.html
arm/arm_error/: Cargo.toml
arm/ball_test/: Cargo.toml
assets/css/: styles.05ed11e4.css  styles.2ccce63c.css  styles.c51ffe61.css
assets/js/: 01a85c17.3d9f4a93.js  0c6f991d.0294f295.js  0c6f991d.50d2e09b.js  0c6f991d.560557a9.js  0e384e19.0a25d88b.js  0e384e19.32cad4fe.js  0e384e19.6d585bde.js  0e384e19.d30f9e02.js  0e384e19.e3d20ce3.js  14eb3368.4c5998e8.js  14eb3368.c18f7ff2.js  152fa862.00c3d540.js  152fa862.43863963.js  1621.de349e84.js  17896441.909ccad3.js  17896441.a15c4f8f.js  18a3b957.2e33d8e9.js  1df93b7f.1f233365.js  1df93b7f.8a40cfed.js  1df93b7f.b8c0b75a.js  1df93b7f.ec36e3bb.js  1df93b7f.f3ac144b.js  1f391b9e.f2d714ec.js  1ff12bd2.351468d1.js  1ff12bd2.cdc18a4b.js  1ff12bd2.ea5306c7.js  1ff12bd2.f6d8bd26.js  2e68cc6a.36268e5b.js  2f68fd5b.e33d1b7b.js  312304d7.9433cb74.js  3206cefa.0b6ebb9d.js  3206cefa.162de661.js  3206cefa.53461a2e.js  3206cefa.69ad099c.js  3206cefa.7a86d61d.js  3206cefa.c2f62ba2.js  320fd432.940dded1.js  320fd432.9bcdfc19.js  33fc5bb8.2219cc65.js  33fc5bb8.ee35054b.js  (+286 more)
benchmark/: inverted_pedulum.rs
benchmarks/: README.md  generate_bm_algo_1_inv_pend.py  generate_bm_algo_2_inv_pend.py  inverted_pedulum.rs
benchmarks/algo_1_main_rs/: ball.rs  inverted_pedulum.rs  quadcopter.rs
benchmarks/algo_2_main_rs/: inverted_pedulum.rs  inverted_pendulum.c
blah/: Cargo.toml  README.md
blah/src/: lib.rs
blog/: atom.xml  index.html  rss.xml
blog/api-docs/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/if-else/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/v0.5.0/: index.html
blog/v0.5.1/: index.html
blog/welcome/: index.html
ci/: script.sh  sphinx-documentation.sh
demos/: Makefile  README.md
demos/benchmarks/: README.md
demos/composed_chain/composed_chain_kernel_python/: Cargo.toml  README.md  pyproject.toml
demos/composed_chain/composed_chain_kernel_python/src/: lib.rs
demos/single_shooting/single_shooting_kernel_python/: Cargo.toml  README.md  pyproject.toml
demos/single_shooting/single_shooting_kernel_python/src/: lib.rs
demos/single_shooting_penalty/single_shooting_penalty_kernel_python/: Cargo.toml  README.md  pyproject.toml
demos/single_shooting_penalty/single_shooting_penalty_kernel_python/src/: lib.rs
demos/soc/soc_kernel_python/: Cargo.toml  README.md  pyproject.toml
demos/soc/soc_kernel_python/src/: lib.rs
docs/: WEBSITE_SETUP.md
gradgen/: __init__.py  cost_gradient.py  cost_gradient_stochastic.py  definitions.py  model_factory.py  scenario_tree_gen.py
gradgen_src/: .gitignore
gradgenz/: __init__.py  cost_gradient.py  definitions.py
gradient_test/: nabla.c  python_test_inverted_pendulum.py
legacy/: LICENSE  README.md
markdown-page/: index.html
playground/: SBIT_test.py  SBIT_test_without_forloop.py  algorithm_1_benchmarking_1.py  algorithm_1_benchmarking_2.py  big_grad.py  bm_algo_1_inv_pend.py  bw_grad.py  bw_grad_for_loop.py  casadi_codegen.py  casadi_gen_c_inv.py  casadi_gen_c_qua.py  casadi_gradient_inv.py  for_gra.py  forward_grad  fw_grad.py  markov_scenario_tree.py  scenario-tree.eps
scripts/: coverage.sh  publish.sh
square_plus_one/: Cargo.toml  README.md
test/: test_gradgen.py
tests/: conftest.py  test_ad.py  test_benchmarks_demo.py  test_builder.py  test_callbacks.py  test_callbacks_additional.py  test_codegen.py  test_composed_function.py  test_composer.py  test_config.py  test_cse.py  test_custom_elementary.py  test_function.py  test_function_docs.py  test_generators_composed.py  test_generators_map_zip.py  test_generators_package.py  test_generators_rendering.py  test_generators_shared_common.py  test_generators_shared_composed.py  test_generators_shared_package.py  test_generators_shared_single_shooting.py  test_generators_single_shooting.py  test_integration.py  test_map_zip.py  test_model.py  test_models.py  test_naming.py  test_project.py  test_project_support.py  test_python_interface_demo.py  test_reduce.py  test_registry.py  test_render.py  test_rendering_custom.py  test_rendering_expression.py  test_rendering_helpers.py  test_rendering_package.py  test_rendering_util.py  test_rendering_workspace.py  (+10 more)
tmp_dbg_crate/: Cargo.toml  README.md
xyz/: README.md
xyz/src/: lib.rs
(+413 files in other folders)
