[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradgen"
version = "0.1.0"
description = "Symbolic differentiation and Rust code generation library."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pantelis Sopasakis" }
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
