[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradgen"
version = "0.1.0"
description = "Symbolic differentiation and Rust code generation library."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pantelis Sopasakis" }
]
license = { text = "MIT" }
dependencies = ["jinja2>=3.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
gradgen = ["templates/*.j2"]

[tool.setuptools.packages.find]
where = ["src"]
