[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradgen"
version = "0.4.0"
description = "Symbolic differentiation and Rust code generation library."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "automatic-differentiation",
  "symbolic-computation",
  "code-generation",
  "rust",
  "scientific-computing",
  "numerical-optimization",
  "embedded-systems",
  "engineering",
  "mathematics",
]
authors = [
  { name = "Pantelis Sopasakis"},
  { name = "Ruairi Moran"},
  { name = "Jie Lin"},  
]
maintainers = [
  { name = "Pantelis Sopasakis"},
]
license = { text = "MIT" }
dependencies = ["jinja2>=3.1"]
optional-dependencies = { dev = ["pytest>=8", "sympy>=1.14"] }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Embedded Systems",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
gradgen = ["templates/*.j2"]

[tool.setuptools.packages.find]
where = ["src"]

# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]
"Homepage" = "https://qub-asl.github.io/gradgen/"
"Bug Reports" = "https://github.com/QUB-ASL/gradgen/issues"
"Source" = "https://github.com/QUB-ASL/gradgen"