[package]
name = "single_shooting_penalty_kernel_python"
version = "0.1.0"
edition = "2021"
description = "Generated gradgen Python wrapper for single_shooting_penalty_kernel"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
single_shooting_penalty_kernel = { path = "../single_shooting_penalty_kernel" }

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module"]