[package]
name = "soc_kernel_python"
version = "0.1.0"
edition = "2021"
description = "Generated gradgen Python wrapper for soc_kernel"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soc_kernel = { path = "../soc_kernel" }

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module"]